Fixup calendar toolbar wrap
Also wrap the toolbar in the dashboard widget

--- a/cosinnus/static/less/fullcalendar.less
+++ b/cosinnus/static/less/fullcalendar.less
@@ -246,8 +246,8 @@
     }
 }
 
-/* Make toolbar header wrap on large calendars */
-.big-calendar.large-space .fc-header-toolbar.fc-toolbar {
+/* Make toolbar header wrap in calendars */
+.big-calendar .fc-header-toolbar.fc-toolbar {
   flex-wrap: wrap;
 }
 
